[package]
name = "psa-crypto-sys"
version = "0.9.1"
authors = ["Parsec Project Contributors"]
edition = "2018"
description = "Wrapper around the PSA Cryptography API"
readme = "README.md"
keywords = ["psa", "crypto", "cryptography"]
categories = ["api-bindings", "external-ffi-bindings", "cryptography"]
license = "Apache-2.0"
repository = "https://github.com/parallaxsecond/rust-psa-crypto"
links = "mbedcrypto"

[build-dependencies]
bindgen = { version = "0.57.0", optional = true }
cc = "1.0.59"
# cmake 0.1.46 needs a newer version of cmake (one that accepts
# --parallel) than the one which comes with Ubuntu 18.04.5, currently
# used by Veracruz CI tests.
cmake = ">=0.1.44, <0.1.46"
walkdir = "2.3.1"

[features]
default = ["operations"]
static = []
interface = ["bindgen"]
operations = ["interface"]
